# xtts-webui

./: .gitignore  README.md  app.py  install.sh  pyproject.toml  requirements.txt  start_xtts_webui.sh  xtts_webui.py
i18n/locale/: pt_BR.json
modules/: train.py
parts/: instuments.py
scripts/resemble_enhance/denoiser/: hparams.py
